; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_ltls.c__ltls_context_finished.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_ltls.c__ltls_context_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @_ltls_context_finished to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_ltls_context_finished(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.tls_context*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.tls_context* @_check_context(i32* %5, i32 1)
  store %struct.tls_context* %6, %struct.tls_context** %3, align 8
  %7 = load %struct.tls_context*, %struct.tls_context** %3, align 8
  %8 = getelementptr inbounds %struct.tls_context, %struct.tls_context* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @SSL_is_init_finished(i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @lua_pushboolean(i32* %11, i32 %12)
  ret i32 1
}

declare dso_local %struct.tls_context* @_check_context(i32*, i32) #1

declare dso_local i32 @SSL_is_init_finished(i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
